Fix avatars with an alpha layer displaying a default avatar behind them.

--- a/aiarena/static/style.css
+++ b/aiarena/static/style.css
@@ -466,8 +466,7 @@ overflow: hidden;
 float: left;
 width: 150px;
 height: 150px;
-background-color: #86c232;
-background-image: url("/static/img/default_avatar.jpg");
+background-color: #fff;
 margin:10px;
 overflow: visible;
 border: 1px solid #86c232;
